# legal-rag

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  reset_dbs.py  test_qdrant.py
agent/: graph.py  tools.py
api/: main.py  tasks.py
database/: embeddings.py  loader.py  manager.py  models.py
frontend/: .dockerignore  .gitignore  Dockerfile  parse_deps.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/ingestion/: IngestionDashboard.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/verification/: EditorForm.tsx  PdfViewer.tsx
ingestion/: gemini_extractor.py  main.py  pdf_processor.py  stitcher.py  utils.py
pdf_data_extraction/: assemble_data.py  gemini_data_extract.py  pdf_data_extract.py  vision_data_extract.py
tests/: test_stitcher.py
utils/: minio_client.py
